--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     </li>
                 </a>
             </ol>
-            <input id="dolar" type="number" name="dolar" placeholder="Valor do dólar hoje">
-            <input id="real" type="number" name="real" placeholder="Valor em reais a ser convertido">
+            <input id="dolar" type="number" name="dolar" placeholder="Cotação do dólar hoje">
+            <input id="real" type="number" name="real" placeholder="Valor">
             <button onclick="calcular()">Calcular</button>
 
             <div id="resultado">
